name:                Network-NS
version:             0.2.0.0
synopsis:            A quick and dirty NameServer for passing arbitrary messages
                     to registered names.
description:         Defines a simple NameServer, a central authority allowing
                     clients to register ownership of names which can then be
                     queried and passed arbitrary messages.
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  -- Modules exported by the library.
  exposed-modules:     Network.NS
                     , Network.NS.Types
                     , Network.NS.Util
                     , Network.NS.Client
                     , Network.NS.Server

  other-extensions:    DeriveGeneric
                     , OverloadedStrings

  build-depends:       base
                     , bytestring
                     , cereal
                     , async
                     , containers
                     , network

  default-language:    Haskell2010

executable NS
  main-is: ServerMain.hs

  other-modules:       Network.NS.Types,
                       Network.NS.Util,
                       Network.NS.Server

  other-extensions:    DeriveGeneric
                     , OverloadedStrings

  ghc-options: -O -threaded -with-rtsopts=-N

  -- Other library packages from which modules are imported.
  build-depends:       base
                     , bytestring
                     , cereal
                     , async
                     , containers
                     , network

  default-language: Haskell2010

